Changelog
=========

4.5.1 (unreleased)
------------------

- Fixed OPAC import for daughter portals. #FLOW-770
- Author Search: Fixed links to works of specific authors. #FLOW-947


4.5.0 (2019-09-26)
------------------

- Support for SWB SRU search. #FLOW-650
- Support for new content types. #FLOW-649


4.4.0 (2019-06-05)
------------------

- Publication viewlet: Sort on parent position. #FLOW-229
- Publication viewlet: Sped up review display by doing sorting in catalog
  query. #FLOW-198
- OPAC search: Fixes for results box. #FLOW-328
- Search: Tweaked text and layout. #FLOW-436
- Search: Fixed error when cross-portal search is used with non-ascii
  characters. #FLOW-397
- Search/Browsing: Support for multipart titles. #FLOW-520
- Post-its: Exchanged images (contact instead of latest comments). #FLOW-435
- Publication RSS: Sort on effective. #FLOW-230
- Author Search: Don't request an actual result set; we only need faceting info.
  #FLOW-198
- Social Media Buttons: moved to footer. #FLOW-439


4.3.3 (2018-12-12)
------------------

- Fixed margins of search results. #REC-985
- Author Search: Added links to other portals. #REC-988
- Author Search: Only show "and comments" if commenting enabled. #REC-987
- Author Search: Fixed unicode error. #REC-1004
- Fixed first heading in firefox. #REC-993
- Custom text for topic browsing. #REC-986
- Advanced Search: Fixed sorting of ddc values. #REC-983


4.3.2 (2018-06-05)
------------------

- Publications view: Also use paths instead of URLs for existing logos. #16548


4.3.1 (2018-05-25)
------------------

- Only show document byline to users with edit permission. Refs #16920
- Moved "Datenschutz" link to footer. Refs #17066
- Fixed links on publications view and homepage being cached in context of
  wrong portal. Refs #16548
- Redirect to the correct portal. Refs #16548
- Publication RSS feed: Show portal title. Filter for review types.
  Refs #17151


4.3.0 (2018-03-05)
------------------

Fixed:
