@@ -6,6 +6,7 @@ Changelog
 
 - Fixed OPAC import for daughter portals. #FLOW-770
 - Author Search: Fixed links to works of specific authors. #FLOW-947
+- Author Search: Sort entries per column, not per row. #SCR-342
 
 
 4.5.0 (2019-09-26)
